Fix alignment of recent games table

--- a/style.css
+++ b/style.css
@@ -105,12 +105,10 @@ body {
     height: 500px;
     width: 100%;
     overflow: auto;
-    justify-items: center;
 }
 td,th {
     text-align: center;
-    padding: 0px 75px 0px 75px;
-    width: 33%;
+    width: 17vw;
     font-family: 'Coda';
     border-bottom: solid gray 1px;
 }
